--- a/KillTheZ.csproj
+++ b/KillTheZ.csproj
@@ -6,6 +6,19 @@
     <SignAssembly>False</SignAssembly>
     <Authors>DarkNeon</Authors>
     <PackageTags>KillTheZ</PackageTags>
+    <ApplicationIcon>GameIcon.ico</ApplicationIcon>
+    <PackageIcon>GameIcon.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="GameIcon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="GameIcon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
